src/components/home/home.css
.home-main {
    display: flex;
    gap: 2rem
}

.filters-menu {
    position: sticky;
    left: 0;
    top: 10rem;
    width: 250px;
    min-width: fit-content;
    height: fit-content;
    padding: 2rem;
    background-color: var(--grey-4);
    border-radius: 12px;
    transition: translate 300ms;
}

.filters-menu .filters-menu-toggle-button {
    position: absolute;
    background-color: var(--color-5);
    color: black;
    top: 0; right: 0;
    translate: 100% 0;
    padding: 12px 22px;
    border-radius: 0px 12px 12px 0px;
    font-size: 24px;
    visibility: hidden;
}

#but-span {
    display: block;
    transition: rotate 500ms;
}

.category-filter-checkbox {
    scale: 1.5;
    margin-right: 1rem;
}

.home-content {
    display: grid;
    flex-grow: 1;
    min-height: 90vh;
    grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
    padding: 2rem;
    background-color: var(--grey-4);
}

.product-card {
    border: 2px solid var(--grey-3);
    padding: 16px;
    border-radius: 2rem;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    transition: all 300ms;
    background-color: white;
}
.product-card:hover {
    border: 2px solid var(--color-3);
    box-shadow: 0px 0px 4rem -1rem var(--color-3);
}

.product-img-container {
    height: 128px;
    display: flex;
    justify-content: center;
}

.product-img {
    display: block;
    height: 100%;
    width: auto;
}

.product-price {
    font-size: 2.5rem;
    width: 100%;
    margin: 0;
}

.lower-container {
    flex-grow: 1;
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    margin-top: 2rem;
}

.lower-container span {
    color: red;
    font-weight: bold;
}

.add-to-cart-button {
    padding: 1rem 2rem;
    margin: 0
}

.add-to-cart-button.disabled {
    background-color: var(--grey-3);
}

@media (max-width: 1200px) {
    .home-content {
        grid-template-columns: repeat(3, 1fr);
    }
}
@media (max-width: 900px) {
    .home-content {
        grid-template-columns: repeat(2, 1fr)
    }
    .filters-menu {
        font-size: 20px;
    }
    .filters-menu label {
        font-size: 18px;
    }
}

@media (max-width: 810px) {
    .home-content {
        padding-top: 12rem;
    }
    .filters-menu {
        translate: -100% 0;
        width: fit-content;
        position: fixed;
        border: 4px solid var(--color-3);
        z-index: 1;
    }
    .filters-menu.visible {
        translate: 0 0;
    }
    .filters-menu.visible *> #but-span {
        rotate: 180deg;
    }

    .filters-menu .filters-menu-toggle-button {
        visibility: visible;
    }
    .filters-menu .filters-menu-toggle-button:hover {
        transform: scale(1);
    }
}

@media (max-width: 763px) {
    .product-img-container {
        height: 78px;
    }
}
@media (max-width: 580px) {
    .product-img-container {
        min-width: 128px;
    }
    .product-img {
        width: auto;
        height: 100%;
    }
    /* .upper-container {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        gap: 1rem;
        width: 100%;
    } */
}
@media (max-width: 500px) {
    .upper-container {
        flex-direction: column;
    }
}

@media (max-width: 450px) {
    .home-content {
        grid-template-columns: 1fr;
    }
}

